# google-font-downloader

./: .gitignore  AUTOMATION_IMPLEMENTATION.md  CHANGELOG.md  COMPLETE_CATALOG_REQUIREMENTS.md  DISCLAIMER.md  FONT_FORMATS_EXPLAINED.md  GITHUB_ACTIONS_SETUP.md  IMPROVED_FALLBACK_INTEGRATION.md  LEGAL_DISCLAIMER.md  LICENSE  README.md  improved_fallback.py  pyproject.toml  setup.py  test_catalog.json
.github/scripts/: generate_font_samples.py  validate_catalog.py
.github/workflows/: ci.yml  publish.yml  update-font-catalog.yml
automation/: README.md  catalog_builder.py  catalog_summary.md  integrate_catalog.py  test_catalog.json  validate_catalog.py
fontdownloader/: __init__.py  cli.py  download_catalog.py  google_fonts_catalog.json
fontdownloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py
