[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fontdownloader"
version = "0.1.2"
description = "CLI to download Google Fonts (TTF/OTF/TTC + WOFF), OFL license, and SCSS"
readme = "README.md"
authors = [{ name = "Mauc" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "click",
  "requests",
  "beautifulsoup4",
]

[project.scripts]
fontdownloader = "fontdownloader.cli:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
